---
source: compiler-core/src/parse/tests.rs
expression: "\n1 + let a = 5\na\n"
---
----- SOURCE CODE

1 + let a = 5
a


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:2:3
  │
2 │ 1 + let a = 5
  │   ^ This operator has no value on its right side

Hint: Remove it or put a value after it.
